[package]
name = "fabmanager-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
regex = "1"       # For regex operations
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }                # For JSON serialization/deserialization
serde_json = "1"                                               # For working with JSON
log = "0.4.28"
tokio = { version = "1.47.1", features = [ "full" ] }
http = "1.3.1"
